# code

./: .gitignore
C/: Exercices alias  Readable  Readable.c  style_guide  style_guide.c
C++/: LICENSE  README.md
C++/CodinGame/: mars_lander  mars_lander.cpp
C++/CoinFlipper/: CoinFlipper  CoinFlipper.cpp
C++/FizzBuzz/: FizzBuzz  (+1 more)
C++/drugio_xcode/drugio_xcode/: CMakeLists.txt  README.md  a.out  changelog.md  main.cpp
C++/drugio_xcode/drugio_xcode/classes/: Command.cpp  Drugio.cpp
C++/drugio_xcode/drugio_xcode/classes/includes/: Command.hpp  DBConfig.hpp  Time.hpp
C++/drugio_xcode/drugio_xcode/drugio_xcode/: drugio.cpp
C++/drugio_xcode/drugio_xcode/drugio_xcode.xcodeproj/: project.pbxproj
C++/drugio_xcode/drugio_xcode/drugio_xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
C++/drugio_xcode/drugio_xcode/drugio_xcode.xcodeproj/project.xcworkspace/xcuserdata/tony.xcuserdatad/: UserInterfaceState.xcuserstate
C++/drugio_xcode/drugio_xcode/drugio_xcode.xcodeproj/xcuserdata/tony.xcuserdatad/xcschemes/: xcschememanagement.plist
C++/drugio_xcode/drugio_xcode/logs/: logs.db  logs.sql
C++/drugio_xcode/drugio_xcode/namespaces/: Command.cpp  Drugio.cpp  ReturnStructures.cpp  Time.cpp
C++/drugio_xcode/drugio_xcode/namespaces/includes/: Actions.hpp  Command.hpp  DBConfig.hpp  DrugioExceptions.hpp  Time.hpp
C++/drugio_xcode/drugio_xcode/resources/: sqlite_modern_cpp.h
Flex/: first_test.h  first_test.l
Java/: .classpath
Python/: learning.py
benchmart_dummies/: Dummy.java  dummy  dummy.cpp
scala/: HelloWorld.scala
vim/: .vimrc
(+627 files in other folders)
